# WWF-Bot

./: .gitignore  main.py  pyproject.toml
ImageProcessor/: ImageProcessor.py  constants.py  image_utils.py
WordFinder/: WordFinder.py  constants.py
src/: config.py  constants.py  logger.py  main.py  playwright_utils.py  utils.py
src/ImageProcessor/: ImageProcessor.py  image_utils.py
src/Player/: Player.py
src/Scraper/: Scraper.py  data.py
src/WordFinder/: WordFinder.py  constants.py
